<resources>
    <string name="app_name">Qwittig</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_purchase_details">Purchase details</string>
    <string name="title_activity_add_purchase">New purchase</string>
    <string name="tab_purchases">Purchases</string>
    <string name="header_articles">Articles</string>
    <string name="hint_article_name">Article name</string>
    <string name="hint_article_price">Price</string>
    <string name="button_add_article">Add Article</string>
    <string name="toast_purchase_added">Added new purchase</string>
    <string name="toast_purchase_discarded">Purchase discarded</string>
    <string name="header_users">Users</string>
    <string name="dialog_users_involved_title">Select identities selected</string>
    <string name="title_activity_login">Log in</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">E-mail</string>
    <string name="action_logout">Log out</string>
    <string name="login_button_log_in">Log in</string>
    <string name="login_button_sign_up">Sign up</string>
    <string name="no_purchases">No purchases</string>
    <string name="action_purchase_delete">Delete purchase</string>
    <string name="toast_purchase_deleted">Purchase deleted</string>
    <string name="title_activity_settings_group_new">Add new group</string>
    <string name="desc_group_add_new">All items in the new group will be displayed in the chosen currency. If you add a new purchase with another currency, the prices will automatically be converted to this default currency. Note that you cannot change a group\'s default currency later.</string>
    <string name="hint_group_name">Group name</string>
    <string name="toast_no_connection">No network available</string>
    <string name="toast_group_added">Added and switched to %1$s</string>
    <string name="hint_group_currency">Currency</string>
    <string name="user_avatar">Profile picture</string>
    <string name="action_purchase_edit">Edit purchase</string>
    <string name="hint_store">Store</string>
    <string name="hint_users">User</string>
    <string name="title_activity_settings_users">Users</string>
    <string name="desc_user_invite_new">Add a new user to %1$s by entering a nickname.</string>
    <string name="error_group_name">Please enter a group name</string>
    <string name="error_email">Please enter a valid email address</string>
    <string name="error_article_name">Please enter an article name</string>
    <string name="error_article_price">Please enter a valid price</string>
    <string name="pref_group_leave_group">Leave %1$s</string>
    <string name="dialog_group_leave_message">Do you really want to leave this group?</string>
    <string name="title_activity_edit_purchase">Edit purchase</string>
    <string name="toast_changes_saved">Changes saved</string>
    <string name="toast_changes_discarded">Changes discarded</string>
    <string name="login_text_forgot_credentials">Forgot your password?</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_password_repeat">Repeat password</string>
    <string name="error_nickname">Please enter a nickname</string>
    <string name="error_password">Please enter a password</string>
    <string name="error_password_match">Passwords do not match</string>
    <string name="purchase_total">Total:</string>
    <string name="dialog_login_reset_password_title">Reset password</string>
    <string name="dialog_login_reset_password_message">Please enter your email address to reset your password.</string>
    <string name="toast_email_address_taken">Email address already taken, please enter another one</string>
    <string name="title_activity_settings_profile">My profile</string>
    <string name="pref_profile">My profile</string>
    <string name="push_purchase_new_alert">%1$s for %2$s</string>
    <string name="push_purchase_new_title">New purchase from %1$s</string>
    <string name="toast_login_failed_credentials">Login failed. Please check your email address an your password.</string>
    <string name="purchase_receipt">Receipt</string>
    <string name="action_purchase_add_edit_receipt_edit">Replace receipt</string>
    <string name="toast_receipt_added">Added receipt</string>
    <string name="toast_receipt_changed">Changed receipt</string>
    <string name="title_activity_finance">Finance</string>
    <string name="hint_password_new">New password</string>
    <string name="balance_owe_you">owes you %1$s</string>
    <string name="comp_unpaid_button_confirm">Confirm</string>
    <string name="button_remind">Remind %1$s</string>
    <string name="balance_gets_from_you">gets %1$s from you</string>
    <string name="button_remind_paid">Remind %1$s you paid</string>
    <string name="header_receipt">Receipt</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_home">Purchases</string>
    <string name="no_compensations">No compensations</string>
    <string name="hint_amount">Amount</string>
    <string name="push_compensation_remind_title">Pay your debts</string>
    <string name="push_compensation_remind_alert">You owe %1$s %2$s</string>
    <string name="push_compensation_remind_paid_title">%1$s has paid</string>
    <string name="push_compensation_remind_paid_alert">Confirm receipt of %1$s</string>
    <string name="toast_compensation_reminded_user">Reminded %1$s to pay the debts</string>
    <string name="toast_error_unknown">Unknown error has occurred</string>
    <string name="push_compensation_payment_done_title">Payment done</string>
    <string name="push_compensation_payment_done_alert">%1$s accepted your payment of %2$s</string>
    <string name="toast_min_one_user">Please select at least one user.</string>
    <string name="toast_min_one_article">Add at least one article</string>
    <string name="pref_category_me">Me</string>
    <string name="pref_category_current_group">Current group</string>
    <string name="toast_leave_group_balance_not_zero">Please clear all outstanding debts and credits before leaving this group</string>
    <string name="dialog_positive_leave">Leave</string>
    <string name="dialog_positive_reset">Reset</string>
    <string name="dialog_group_join_title">Join %1$s?</string>
    <string name="dialog_positive_join">Join</string>
    <string name="dialog_negative_discard">Discard </string>
    <string name="cab_title_selected">%1$d selected</string>
    <string name="action_account_delete">Delete account</string>
    <string name="dialog_positive_delete">Delete</string>
    <string name="title_activity_help_feedback">Help and Feedback</string>
    <string name="header_help">Help</string>
    <string name="header_feedback" translatable="false">Feedback</string>
    <string name="help_faq" translatable="false">FAQ</string>
    <string name="help_contact_support">Contact support</string>
    <string name="help_feedback">Give feedback</string>
    <string name="help_recommend">Recommend Qwittig to a friend</string>
    <string name="help_rate">Rate us in the Play Store</string>
    <string name="email_support_subject" translatable="false">Qwittig Support</string>
    <string name="email_support_message">Please describe your problem. We will get back to you as soon as possible.</string>
    <string name="email_device_build_info">----\nThe following information helps us to faster identity your problem.\nDevice: %1$s, %2$s, %3$s, %4$s\nBuild:%5$s, %6$s\n----</string>
    <string name="email_feedback_subject" translatable="false">Qwittig Feedback</string>
    <string name="toast_purchase_added_draft">Purchase saved as a draft</string>
    <string name="title_activity_purchase_drafts">Drafts</string>
    <string name="action_purchase_save_draft">Save as draft</string>
    <string name="action_drafts_delete_selected">Delete selected Drafts</string>
    <string name="dialog_account_delete_message">Do you really want to delete your account? You cannot undo this!</string>
    <string name="dialog_account_delete_message_email">If you really want to delete your account, please re-authenticate yourself. Note that you cannot undo this!</string>
    <string name="nickname_me">Me</string>
    <string name="progress_account_delete">Deleting account…</string>
    <string name="push_user_deleted_alert">Outstanding debts or credits have automatically been cleared</string>
    <string name="push_user_deleted_title">%1$s deleted the account</string>
    <string name="progress_login">Logging in…</string>
    <string name="dialog_purchase_discard">Discard</string>
    <string name="dialog_purchase_discard_message">Do you want to discard or save the purchase as a draft?</string>
    <string name="dialog_positive_save_draft">Save draft</string>
    <string name="purchase_my_share">My share:</string>
    <string name="pref_group_name_hint">New group name</string>
    <string name="toast_create_image_file_failed">Failed to open camera. Maybe your disk space is full?</string>
    <string name="toast_group_already_in_list">Group already exists</string>
    <string name="dialog_group_leave_delete_message">You are the last member of this group. Leaving it will delete the group and all its items!</string>
    <string name="error_valid_amount">Please enter a valid amount</string>
    <string name="header_settings_users_new">Add user</string>
    <string name="header_settings_users_existing">Existing identities</string>
    <string name="tab_compensations_new">Settlement</string>
    <string name="tab_compensations_archive">Archive</string>
    <string name="header_purchase">Details</string>
    <string name="action_purchase_edit_save_changes_draft">Save changes in draft</string>
    <string name="toast_changes_saved_as_draft">Changes saved in draft</string>
    <string name="dialog_discard_changes_message">Discard changes?</string>
    <string name="push_user_joined_title">New member in %1$s</string>
    <string name="push_user_joined_alert">%1$s has joined</string>
    <string name="push_user_left_group_title">%1$s left</string>
    <string name="push_user_left_group_alert">%1$s has left %2$s</string>
    <string name="no_compensations_history">No previous payments</string>
    <string name="action_purchase_add_edit_receipt_delete">Delete receipt</string>
    <string name="title_activity_stats">Stats</string>
    <string name="action_sort_by_user">Sort by user</string>
    <string name="action_show_average">Show average numbers</string>
    <string name="action_show_percent">Show percent Values</string>
    <string name="action_purchase_show_exchange_rate">Show exchange rate</string>
    <string name="action_settings_profile_avatar_edit">Edit profile image</string>
    <string name="action_settings_profile_avatar_delete">Delete profile image</string>
    <string name="pref_group_add_new">Create new group</string>
    <string name="pref_group_current">Current group</string>
    <string name="pref_group_name">Change group name</string>
    <string name="action_settings_profile_unlink_facebook">Unlink from Facebook</string>
    <string name="action_settings_profile_unlink_google">Unlink from Google</string>
    <string name="action_share">Share</string>
    <string name="invite_accept">Accept the invitation?</string>
    <string name="invite_accept_no">Ignore</string>
    <string name="invite_accept_yes">Accept</string>
    <string name="action_edit_nickname">Edit nickname</string>
    <string name="action_edit_avatar">Edit profile picture</string>
    <string name="action_remove">Remove</string>
    <string name="tut_camera_guidance">Keep the receipt straight and make sure the relevant parts are included.</string>
    <string name="tut_camera_header">The better picture you take, the better the result will be!</string>
    <string name="action_add">Add</string>
</resources>