<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="PREF_CATEGORY_ME"
        android:title="@string/pref_category_me">
        <Preference
            android:key="PREF_PROFILE"
            android:title="@string/pref_profile"/>
        <Preference
            android:key="PREF_STORES"
            android:title="@string/pref_stores"/>
        <ListPreference
            android:key="PREF_GROUP_CURRENT"
            android:title="@string/pref_group_current"/>
        <Preference
            android:key="PREF_GROUP_ADD_NEW"
            android:title="@string/pref_group_add_new"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="PREF_CATEGORY_CURRENT_GROUP"
        android:title="@string/pref_category_current_group">
        <Preference
            android:key="PREF_GROUP_ADD_USER"
            android:title="@string/pref_group_add_user"/>
        <EditTextPreference
            android:key="PREF_GROUP_NAME"
            android:title="@string/pref_group_name"
            android:hint="@string/pref_group_name_hint"/>
        <Preference
            android:key="PREF_GROUP_LEAVE"
            android:title="@string/pref_group_leave_group">
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>