<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/element_spacing_normal"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/key_line_1"
        android:layout_marginEnd="@dimen/key_line_1"
        tools:context="ch.berta.fabio.qwittig.ui.LoginSignUpFragment">

        <ImageButton
            android:id="@+id/ibt_login_signup_avatar"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:layout_marginBottom="@dimen/element_spacing_normal"
            android:contentDescription="@string/user_avatar"
            android:src="@drawable/ic_avatar_80dp"/>

        <EditText
            android:id="@+id/et_login_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_spacing_normal"
            android:layout_marginBottom="@dimen/element_spacing_normal"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email" />

        <EditText
            android:id="@+id/et_login_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_spacing_normal"
            android:inputType="textPassword"
            android:hint="@string/hint_password" />

        <EditText
            android:id="@+id/et_login_signup_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_spacing_normal"
            android:inputType="textPassword"
            android:hint="@string/hint_password_repeat" />

        <EditText
            android:id="@+id/et_login_signup_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_spacing_normal"
            android:inputType="textPersonName"
            android:hint="@string/hint_nickname" />

        <Button
            android:id="@+id/bt_login_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_sign_up" />

    </LinearLayout>
</ScrollView>

