<!--
  ~ Copyright (c) 2015 Fabio Berta
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.stats.StatsPieBaseFragment">

    <item android:id="@+id/action_sort_by_user"
          android:title="@string/action_sort_by_user"
          android:orderInCategory="1"
          android:checkable="true"
          android:checked="false"
          app:showAsAction="never"/>

    <item android:id="@+id/action_show_percent"
          android:title="@string/action_show_percent"
          android:orderInCategory="2"
          android:checkable="true"
          android:checked="true"
          app:showAsAction="never"/>

    <item android:id="@+id/action_show_average"
          android:title="@string/action_show_average"
          android:orderInCategory="3"
          android:checkable="true"
          android:checked="false"
          app:showAsAction="never"/>
</menu>
