<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ch.giantific.qwittig.ui.activities.PurchaseDetailsActivity">

    <item
        android:id="@+id/action_purchase_edit"
        android:title="@string/action_purchase_edit"
        android:icon="@drawable/ic_create_white_24dp"
        android:orderInCategory="1"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_purchase_delete"
        android:title="@string/action_purchase_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:visible="false"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_purchase_show_exchange_rate"
        android:title="@string/action_purchase_show_exchange_rate"
        android:orderInCategory="4"
        android:visible="false"
        app:showAsAction="never"/>
</menu>
