<!--
  ~ Copyright (c) 2015 Fabio Berta
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.purchases.details.PurchaseDetailsReceiptFragment"
    >

    <item
        android:id="@+id/action_purchase_edit"
        android:icon="@drawable/ic_create_white_24dp"
        android:orderInCategory="1"
        android:title="@string/action_purchase_edit"
        android:visible="false"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_purchase_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="2"
        android:title="@string/action_purchase_delete"
        android:visible="false"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_purchase_show_exchange_rate"
        android:orderInCategory="4"
        android:title="@string/action_purchase_show_exchange_rate"
        android:visible="false"
        app:showAsAction="never"
        />
</menu>
