<!--
  ~ Copyright (c) 2015 Fabio Berta
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.purchases.addedit.BasePurchaseAddEditReceiptFragment"
    >

    <item
        android:id="@+id/action_purchase_edit_receipt_add"
        android:orderInCategory="1"
        android:title="@string/action_add"
        android:visible="false"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_purchase_edit_receipt_edit"
        android:icon="@drawable/ic_create_white_24dp"
        android:orderInCategory="2"
        android:title="@string/action_purchase_add_edit_receipt_edit"
        android:visible="false"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_purchase_edit_receipt_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="3"
        android:title="@string/action_purchase_add_edit_receipt_delete"
        android:visible="false"
        app:showAsAction="ifRoom"
        />

</menu>
