<!--
  ~ Copyright (c) 2015 Fabio Berta
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="ch.giantific.qwittig.presentation.login.LoginEmailViewModel"
            />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:transitionGroup="true"
        tools:context=".presentation.login.LoginEmailFragment"
        tools:targetApi="lollipop"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginEnd="@dimen/key_line_1"
            android:layout_marginStart="@dimen/key_line_1"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:visibility="@{viewModel.loading ? View.GONE : View.VISIBLE}"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_space"
                android:layout_marginTop="@dimen/small_space"
                android:error="@{!viewModel.validate ? null : viewModel.emailComplete ? null : @string/error_email}"
                android:transitionGroup="true"
                >

                <AutoCompleteTextView
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:onTextChanged="@{viewModel.onEmailChanged}"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_space"
                android:error="@{!viewModel.validate ? null : viewModel.passwordComplete ? null : @string/error_password}"
                android:transitionGroup="true"
                >

                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:onTextChanged="@{viewModel.onPasswordChanged}"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_space"
                android:transitionGroup="true"
                android:visibility="@{viewModel.signUp ? View.VISIBLE : View.GONE}"
                >

                <EditText
                    android:id="@+id/et_login_password_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password_repeat"
                    android:inputType="textPassword"
                    android:onTextChanged="@{viewModel.onPasswordRepeatChanged}"
                    />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/bt_login_email_login"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="@{viewModel.onLoginClick}"
                    android:text="@string/login_button_log_in"
                    tools:ignore="ButtonStyle"
                    />

                <Button
                    android:id="@+id/bt_login_email_sign_up"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="@{viewModel.onSignUpClick}"
                    android:text="@string/login_button_sign_up"
                    tools:ignore="ButtonStyle"
                    />

            </LinearLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/touch_target_min"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:onClick="@{viewModel.onResetPasswordClick}"
                android:text="@string/login_text_forgot_credentials"
                />

        </LinearLayout>

        <include
            layout="@layout/include_progress_login"
            app:viewModel="@{viewModel}"
            />

    </FrameLayout>
</layout>


