<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/sv_tut_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_trans"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingEnd="@dimen/key_line_1"
            android:paddingStart="@dimen/key_line_1"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <TextView
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/big_space"
                    android:layout_marginTop="@dimen/big_space"
                    android:gravity="center_horizontal"
                    android:text="@string/tut_camera_header"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tut_camera_receipt_height"
                    android:layout_marginBottom="@dimen/big_space"
                    android:contentDescription="@string/purchase_receipt"
                    android:src="@drawable/receipt"
                    />

                <TextView
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/big_space"
                    android:gravity="center_horizontal"
                    android:text="@string/tut_camera_guidance"
                    />
            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_tut_camera_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/normal_space"
                android:src="@drawable/ic_done_black_24dp"
                />

        </LinearLayout>

    </ScrollView>

</layout>